Register user option added

--- a/public/login.html
+++ b/public/login.html
@@ -70,41 +70,41 @@
                   <form class="col s12">
                     <div class="row">
                         <div class="input-field col s12">
-                          <input id="email" type="email" class="validate">
-                          <label for="email">Email</label>
+                          <input name="username" type="text" class="validate">
+                          <label for="username">Username</label>
                         </div>
                       </div>
                     <div class="row">
                       <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
+                        <input name="password" type="password" class="validate">
                         <label for="password">Password</label>
                       </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <select class="icons">
+                            <select name="company" class="icons">
                               <option value="" disabled selected>Choose your option</option>
-                              <option value="" data-icon="images/sample-1.jpg" class="left circle">Smart Sense</option>
-                              <option value="" data-icon="images/office.jpg" class="left circle">Smart Net</option>
-                              <option value="" data-icon="images/yuna.jpg" class="left circle">Smart AV</option>
-                              <option value="" data-icon="images/yuna.jpg" class="left circle">5x9 Networks</option>
-                              <option value="" data-icon="images/yuna.jpg" class="left circle">Guest</option>                                                            
+                              <option value="smart-sense" data-icon="static/images/SS_logo.png" class="left circle">Smart Sense</option>
+                              <option value="smart-net" data-icon="static/images/SN_logo.png" class="left circle">Smart Net</option>
+                              <option value="smart-av" data-icon="static/images/SAV_logo.png" class="left circle">Smart AV</option>
+                              <option value="5x9-networks" data-icon="static/images/networks_logo.png" class="left circle">5x9 Networks</option>
+                              <option value="guest" data-icon="" class="left circle">Guest</option>                                                            
                             </select>
                             <label>Company</label>
                           </div>
                     </div>
                     <div class="row">
                       <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
+                        <input name="firstName" type="text" class="validate">
+                        <label for="firstName">First Name</label>
                       </div>
                       <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
+                        <input name="lastName" type="text" class="validate">
+                        <label for="lastName">Last Name</label>
                       </div>
                     </div>
                     <div class="row">
-                        <button type="button" id="btn-login" class="col s12 btn btn-large waves-effect indigo">Register</button>
+                        <button type="button" id="btn-register" class="col s12 btn btn-large waves-effect indigo">Register</button>
                     </div>
                   </form>
                 </div>
