Added user registration to tournament from FE

--- a/public/home.html
+++ b/public/home.html
@@ -70,7 +70,7 @@
                 <div id="tabletennis-register" class="col s12 center">
                     <div id="register-0">
                         <h3>Preostalo vrijeme za prijavu: <span class="register-time-left"></span></h3>
-                        <a class="waves-effect waves-light btn">Da, želim se prijaviti u stolnotenisku ligu!</a>
+                        <a data-tournament-id="0" class="waves-effect waves-light register register-btn btn">Da, želim se prijaviti u stolnotenisku ligu!</a>
                         <div>Trenutno prijavljeni u stolnotenisku ligu: <span class="register-players"></span> </div>
                     </div>
                 </div>
@@ -88,33 +88,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Ivan Rubil</td>
-                                <td>3</td>
-                                <td>2</td>
-                                <td>1</td>
-                                <td>10:6</td>
-                                <td>4</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Mladen Josipović</td>
-                                <td>3</td>
-                                <td>1</td>
-                                <td>2</td>
-                                <td>7:5</td>
-                                <td>2</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Luka Ruklic</td>
-                                <td>3</td>
-                                <td>0</td>
-                                <td>3</td>
-                                <td>1:12</td>
-                                <td>0</td>
-                            </tr>
                         </tbody>
                     </table>
                 </div>
