Added tournament matches as parameter and all appropriate actions

--- a/public/home.html
+++ b/public/home.html
@@ -14,6 +14,7 @@
         <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.10.16/js/dataTables.material.min.js"></script>        
         <script src="static/js/main.js"></script>
+        <script src="static/js/state.js"></script>        
 
         <script src="static/js/tournament/tournament.js"></script>        
         
@@ -80,7 +81,6 @@
                     <table id="tabletennis-datatable" class="mdl-data-table" cellspacing="0" width="100%">
                         <thead>
                             <tr>
-                                <th>#</th>
                                 <th>Igrač</th>
                                 <th>OS</th>
                                 <th>P</th>
@@ -94,8 +94,6 @@
                     </table>
                 </div>
                 <div id="tabletennis-matches" class="col s12 center">
-                    <div>Player 1 : Player 2 4:3</div>
-                    <div>Player 3 : Player 4 4:2</div>
                 </div>
                 <div id="tabletennis-winners" class="col s12">Još nema održanih stolnoteniskih liga.</div>
             </div>
