Meals update changes

--- a/public/home.html
+++ b/public/home.html
@@ -51,8 +51,14 @@
         
         <div id="meals-section" class="col s12 section hidden">
             <div class="row">
-                <div class="col s6" data-place="btw">BTW restaurant</div>
-                <div class="col s6" data-place="vujca">Pri Vujči</div>            
+                <div class="restaurant-column col s6" data-place="btw">
+                    <div class="center">BTW restaurant:</div>
+                    <div class="text center"></div>
+                </div>
+                <div class="restaurant-column col s6 center " data-place="vujca">
+                    <div class="center">PRI VUJČI:</div>
+                    <img width="370px" height="550px" src=""></img>    
+                </div>            
             </div>
         </div>
 
